--- a/app/views/shared/forms/_form_header.html.erb
+++ b/app/views/shared/forms/_form_header.html.erb
@@ -1,7 +1,7 @@
- <div class="px-6 flex items-center justify-between">
+ <div class="px-4 flex items-center justify-between">
    <div>
      <%= link_to root_path do %>
-     <button class="outline-none"><svg class="w-8 h-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg></button>
+     <button class="focus:outline-none"><svg class="w-8 h-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg></button>
      <% end %>
    </div>
 
