--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="pt-8 px-2">
+<div class="pt-4 px-2 lg:pt-8">
 
   <%= render "shared/forms/form_header" %>
 
@@ -9,7 +9,7 @@
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
 
-        <div class="space-y-2">
+        <div class="space-y-4">
 
           <%= f.input :first_name,
                         required: false,
@@ -36,14 +36,14 @@
                         input_html: { autocomplete: "current-password" },
                         label: false,
                         placeholder: 'Mot de passe*',
-                        input_html: { class: "text-sm px-2 py-2 border-2 border-gray-200 w-full rounded-lg"} %>
+                        input_html: { class: "text-sm px-2 py-2 border-2 border-gray-200 w-full rounded-lg focus:outline-none focus:border-japonica-300"} %>
 
           <%= f.input :password_confirmation,
                         required: true,
                         input_html: { autocomplete: "new-password" },
                         placeholder: 'Mot de passe confirmation*',
                         label: false,
-                        input_html: { class: "text-sm px-2 py-2 border-2 border-gray-200 w-full rounded-lg"} %>
+                        input_html: { class: "text-sm px-2 py-2 border-2 border-gray-200 w-full rounded-lg focus:outline-none focus:border-japonica-300"} %>
 
           <!-- To let user add a photo for later version -->
 
@@ -62,18 +62,18 @@
 
 
           <div class="pt-2">
-            <%= f.button :submit, "Valider", class:"py-4 w-full text-lg text-white font-bold bg-gray-900 rounded-xl focus:outline-none" %>
+            <%= f.button :submit, "Valider", class:"py-4 w-full text-lg text-white font-bold bg-gray-900 rounded-xl cursor-pointer focus:outline-none" %>
           </div>
         </div>
       <% end %>
       <%#= render "devise/shared/links" %>
       <div class="flex justify-between items-center">
-        <svg class="w-20 h-20" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 89 1"><path stroke="#A09F9F" d="M0 .5h89"/></svg>
+        <svg class="w-20 h-16" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 89 1"><path stroke="#A09F9F" d="M0 .5h89"/></svg>
         <span class="text-sm text-center text-gray-700">Déjà inscris ?</span>
-        <svg class="w-20 h-20" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 89 1"><path stroke="#A09F9F" d="M0 .5h89"/></svg>
+        <svg class="w-20 h-16" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 89 1"><path stroke="#A09F9F" d="M0 .5h89"/></svg>
       </div>
       <div class="flex justify-center">
-        <%= link_to "Se connecter",  new_user_session_path, class:'py-4 px-6 text-gray-400 font-medium border-2 border-gray-200 rounded-xl hover:bg-gray-50 hover:text-japonica-500' %>
+        <%= link_to "Se connecter",  new_user_session_path, class:'py-4 text-center w-full text-lg text-gray-800 font-bold bg-white border-2 border-gray-200 rounded-xl focus:outline-none hover:text-japonica-500 hover:border-japonica-300 ' %>
       </div>
     </div>
   </div>
