--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -87,9 +87,9 @@
       <div class="px-4 pb-2 inline-flex space-x-2 md:px-8 lg:justify-center lg:grid lg:grid-cols-3 lg:space-x-0 lg:gap-4 lg:px-16 2xl:px-0.5 ">
         <% @items.first(6).each do |item| %>
           <%= link_to item_path(item), class:"" do %>
-            <div class="relative pb-2 w-60 rounded-lg lg:w-full border-gray-200 border border-opacity-70 hover:shadow-3xl focus:outline-none">
-              <div class="relative h-64 lg:h-96" style="padding-bottom: 100%">
-                <%= cl_image_tag item.photos[0].key, class:'rounded-t absolute h-full w-full inset-0 object-cover shadow', alt:'objet en céramique'  %>
+            <div class="relative pb-2 w-72 rounded-lg lg:w-full border-gray-200 border border-opacity-70 hover:shadow-3xl focus:outline-none">
+              <div class="relative h-68 lg:h-full pb-4/5">
+               <%= cl_image_tag item.photos[0].key, class:"rounded-t absolute h-full w-full inset-0 object-cover #{image_position(item)} shadow", alt:'objet en céramique' %>
               </div>
               <div>
                 <div class="pt-4 px-2">
