--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,7 +2,7 @@
   <div class="px-4 py-4 lg:max-w-7xl lg:mx-auto lg:h-4/5 lg:flex lg:space-x-8 lg:pt-12">
 
     <!-- photo on mobile -->
-    <div class="relative lg:hidden" style="padding-bottom: 80%">
+    <div class="relative pb-4/5 lg:hidden">
       <%= image_tag "photo.png", class:"rounded h-full w-full inset-0 absolute object-cover" %>
     </div>
 
