--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,7 +6,7 @@
     <% @articles.each do |article| %>
     <div class="bg-white rounded overflow-hidden shadow-2xl">
       <!-- photo on mobile small fix for now need to create padding bottom for tailwind in config file -->
-      <div class="relative h-64 lg:h-80" style="padding-bottom: 80%;">
+      <div class="relative h-64 pb-4/5 lg:h-80">
         <span> <%= cl_image_tag article.photo.key, class:'absolute h-full w-full inset-0 object-cover object-top shadow' %> </span>
       </div>
       <!-- photo on desktop -->
