--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -155,7 +155,7 @@
 
   <!-- deux autres article les plus récent après celui au dessus en petit en dessous -->
         <div class="bg-white overflow-hidden shadow-lg rounded lg:order-1 lg:my-48">
-          <div class="relative" style="padding-bottom: 80%;">
+          <div class="relative pb-4/5">
             <span> <%= cl_image_tag @articles[1].photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow' %> </span>
           </div>
           <div class="px-3 flex flex-col h-36">
@@ -173,7 +173,7 @@
         </div>
 
         <div class="bg-white overflow-hidden shadow-lg rounded lg:order-3 lg:my-48">
-          <div class="relative" style="padding-bottom: 80%;">
+          <div class="relative pb-4/5">
             <span> <%= cl_image_tag @articles[2].photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow' %> </span>
           </div>
           <div class="flex flex-col px-3 h-36">
