--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -48,7 +48,7 @@
 
 <!-- Catégories filtrer en front en JS  -->
 
-    <div class="pt-4 pb-10  mt-10 ml-2 overflow-x-auto scrollbars-hidden md:ml-6">
+    <div class="toto pt-4 pb-10  mt-10 ml-2 overflow-x-auto scrollbars-hidden md:ml-6">
       <div class="px-4 inline-flex items-center text-center space-x-2">
 
         <button data-action="click->item-categories#displayAll" data-item-categories-target="allButton" class="px-4 py-3 text-sm font-bold text-white rounded-full  border border-gray-200 whitespace-nowrap tracking-wide focus:outline-none">Tout voir</button>
