--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,30 +2,30 @@
   <h2 class="font-bold text-gray-700 text-3xl text-center">Journal</h2>
   <p class="pt-2 text-gray-500 text-center max-w-md mx-auto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa libero labore natus atque, ducimus sed.</p>
 
-  <div class="pt-6 space-y-6 lg:relative lg:grid lg:grid-cols-3 lg:gap-4 lg:space-y-0">
+  <div class="pt-6 grid grid-cols-1 gap-4 lg:relative lg:grid-cols-3 ">
     <% @articles.each do |article| %>
-    <div class="bg-white rounded overflow-hidden shadow-2xl">
-      <!-- photo on mobile small fix for now need to create padding bottom for tailwind in config file -->
-      <div class="relative h-64 pb-4/5 lg:h-80">
-        <span> <%= cl_image_tag article.photo.key, class:'absolute h-full w-full inset-0 object-cover object-top shadow' %> </span>
-      </div>
-      <!-- photo on desktop -->
-      <div class="flex flex-col px-4 ">
-        <div class="pt-2">
-          <span class="text-japonica-500 font-bold "> <%= article.category %> </span>
+      <%= link_to article_path(article), class:"bg-white rounded overflow-hidden shadow-2xl" do %>
+        <!-- photo on mobile small fix for now need to create padding bottom for tailwind in config file -->
+        <div class="relative h-64 pb-4/5 lg:h-80">
+          <span> <%= cl_image_tag article.photo.key, class:'absolute h-full w-full inset-0 object-cover shadow' %> </span>
         </div>
-        <div class="">
-          <span class="font-bold text-2xl text-gray-700 font-cursive"><%= article.title %></span>
+        <!-- photo on desktop -->
+        <div class="flex flex-col px-4 ">
+          <div class="pt-2">
+            <span class="text-japonica-500 font-bold "> <%= article.category %> </span>
+          </div>
+          <div class="">
+            <span class="font-bold text-2xl text-gray-700 font-cursive"><%= article.title %></span>
+          </div>
+          <div class="pt-4 lg:pb-14 ">
+            <span class="text-gray-600"><%= article.rich_body %></span>
+          </div>
+          <div class=" bottom-0 pt-6 pb-2 flex space-x-2 lg:absolute">
+            <span class="text-gray-500 font-thin text-sm"><%= (article.created_at).strftime("%b %d, %Y") %></span>
+            <span class="text-gray-500 font-thin text-sm"> <%= article.duration %> min de lecture </span>
+          </div>
         </div>
-        <div class="pt-4 lg:pb-14 ">
-          <span class="text-gray-600"><%= article.rich_body %></span>
-        </div>
-        <div class=" bottom-0 pt-6 pb-2 flex space-x-2 lg:absolute">
-          <span class="text-gray-500 font-thin text-sm"><%= (article.created_at).strftime("%b %d, %Y") %></span>
-          <span class="text-gray-500 font-thin text-sm">6 min de lecture</span>
-        </div>
-      </div>
-    </div>
+      <% end %>
     <% end %>
   </div>
   <div class="hidden lg:flex space-x-20 items-center">
