--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -18,7 +18,7 @@
             <span class="font-bold text-2xl text-gray-700 font-cursive"><%= article.title %></span>
           </div>
           <div class="pt-4 lg:pb-14 ">
-            <span class="text-gray-600"><%= article.rich_body %></span>
+            <span class="text-gray-600"><%= article.description %></span>
           </div>
           <div class=" bottom-0 pt-6 pb-2 flex space-x-2 lg:absolute">
             <span class="text-gray-500 font-thin text-sm"><%= (article.created_at).strftime("%b %d, %Y") %></span>
