try something for trix img

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -39,9 +39,9 @@
     width: 0;
   }
 }
-// .shop-cards {
-//   &:hover {
-//     transition: all 0.2s ease-out;
-//     top: -2px;
-//   }
-// }
+
+.attachment {
+  width: 400px;
+  height: 200px;
+}
+
