--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,4 @@
-<div class="pt-8 px-4 pb-24 max-w-6xl mx-auto">
+<div class="pt-8 px-4 pb-24 max-w-6xl mx-auto lg:px-12">
 
   <div class="pb-2 flex items-center justify-between">
     <%= render "shared/navbar/navbar_light" %>
@@ -11,7 +11,7 @@
     <%= cl_image_tag @article.photo.key, class:'absolute h-full w-full inset-0 object-cover shadow rounded' %>
   </div>
 
-  <div class="pt-4 text-gray-600 max-w-3xl">
+  <div class="pt-8 text-gray-600 max-w-prose float-right">
     <p> <%= @article.rich_body %> </p>
   </div>
 </div>
