--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -42,10 +42,15 @@
 
 .attachment {
 
+  .attachment-gallery {
+    display: content !important;
+    flex-wrap: nowrap !important;
+  }
+
   img {
 
     width: 400px;
-    height: 200px;
+
   }
 }
 
