--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,4 @@
-<div class="pt-8 px-4 pb-24 max-w-6xl mx-auto lg:px-12">
+<div class="pt-8 px-4 pb-24 max-w-xl mx-auto lg:px-12">
 
   <div class="pb-2 flex items-center justify-between">
     <%= render "shared/navbar/navbar_light" %>
