--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -50,6 +50,6 @@
 }
 
 .trix-content .attachment-gallery {
-    display: content !important;
+    display: contents !important;
     flex-wrap: nowrap !important;
   }
