--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,12 @@
 <div class="pt-8 px-4 pb-24 max-w-6xl mx-auto lg:px-12">
 
   <div class="pb-2 flex items-center justify-between">
-    <%= render "shared/navbar/navbar_light" %>
+    <div class="py-2 px-2 lg:py-4">
+      <%= link_to articles_path, class:'text-gray-700 focus:outline-none hover:text-gray-400' do %>
+        <svg class="w-8 h-8 fill-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg>
+      <% end %>
+    </div>
+
     <div class="flex flex-col items-end">
       <span class="text-japonica-500 text-sm font-semibold lg:text-lg"><%= @article.category %></span>
       <span class="text-gray-700 text-xl font-bold font-cursive lg:text-2xl"><%= @article.title %></span>
