--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -132,8 +132,7 @@
       <div class="pt-8 grid grid-cols-2 gap-2 lg:flex lg:justify-center max-w-xl mx-auto lg:pt-0 lg:max-w-4xl">
 
   <!--       premier article le plus récent -->
-
-        <div class="col-span-2 bg-white lg:w-1/2 overflow-hidden shadow-lg rounded lg:order-2 lg:my-12">
+        <%= link_to article_path(Article.last), class:"col-span-2 bg-white lg:w-1/2 overflow-hidden shadow-lg rounded lg:order-2 lg:my-12" do %>
           <div class="relative" style="padding-bottom: 85%;">
             <span> <%= cl_image_tag Article.last.photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow', alt:'article illustration' %> </span>
           </div>
@@ -152,11 +151,11 @@
               <span class="text-gray-500 text-xs"><%= Article.last.duration %> min de lecture</span>
             </div>
           </div>
-        </div>
+        <% end %>
 
   <!-- deux autres article les plus récent après celui au dessus en petit en dessous -->
         <% if Article.all.count >= 3 %>
-          <div class="bg-white lg:w-1/4 lg:mx-4 overflow-hidden shadow-lg rounded lg:order-1 lg:my-48">
+        <%= link_to article_path(@articles[1]), class:"bg-white lg:w-1/4 lg:mx-4 overflow-hidden shadow-lg rounded lg:order-1 lg:my-48" do %>
             <div class="relative pb-4/5">
               <span> <%= cl_image_tag @articles[1].photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow' %> </span>
             </div>
@@ -172,9 +171,9 @@
                 <span class="text-gray-500 text-xs"><%= @articles[1].duration %> min de lecture</span>
               </div>
             </div>
-          </div>
+          <% end %>
 
-          <div class="bg-white lg:w-1/4 lg:mx-4 overflow-hidden shadow-lg rounded lg:order-3 lg:my-48">
+          <%= link_to article_path(@articles[2]), class:"bg-white lg:w-1/4 lg:mx-4 overflow-hidden shadow-lg rounded lg:order-3 lg:my-48" do %>
             <div class="relative pb-4/5">
               <span> <%= cl_image_tag @articles[2].photo.key, class:'absolute h-full w-full inset-0 object-cover object-center shadow' %> </span>
             </div>
@@ -190,7 +189,7 @@
                 <span class="text-gray-500 text-xs"><%= @articles[2].duration %> min de lecture</span>
               </div>
             </div>
-          </div>
+          <% end %>
         <% end %>
       </div>
     </div>
