--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,9 +2,9 @@
   <h2 class="font-bold text-gray-700 text-3xl text-center">Journal</h2>
   <p class="pt-2 text-gray-500 text-center max-w-md mx-auto">Voici quelques articles sur la céramique que j'ai écris !</p>
 
-  <div class="pt-6 grid grid-cols-1 gap-4 lg:relative lg:grid-cols-3 ">
+  <div class="pt-6 flex flex-col space-y-4 lg:space-y-0 lg:justify-center lg:space-x-4 lg:flex-row lg:relative">
     <% @articles.each do |article| %>
-      <%= link_to article_path(article), class:"bg-white rounded overflow-hidden shadow-2xl" do %>
+      <%= link_to article_path(article), class:"bg-white lg:w-1/3 rounded overflow-hidden shadow-2xl" do %>
         <!-- photo on mobile small fix for now need to create padding bottom for tailwind in config file -->
         <div class="relative h-64 pb-4/5 lg:h-80">
           <span> <%= cl_image_tag article.photo.key, class:'absolute h-full w-full inset-0 object-cover shadow' %> </span>
