--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 <!-- canonical -->
      <link rel="canonical" href="<%= url_for(:only_path => false) %>" />
 <!-- Osano for cookie consent -->
-    <script src="https://cmp.osano.com/169ldSSR9wHkkoZj/4484c914-cafd-47a7-8632-4eaf1832bcfc/osano.js"></script>
+    <!-- <script src="https://cmp.osano.com/169ldSSR9wHkkoZj/4484c914-cafd-47a7-8632-4eaf1832bcfc/osano.js"></script> -->
 
 <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-32N0L2H7X5"></script>
