--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -67,7 +67,7 @@
         <%= link_to item_path(item), class:"group" do %>
             <div class="relative shadow-3xl rounded pb-2 lg:shadow-none lg:border-gray-200 lg:border lg:border-opacity-70 lg:hover:shadow-3xl focus:outline-none">
               <div class="relative pb-4/5" >
-                <%= cl_image_tag item.photos[0].key, class:"rounded-t absolute h-full w-full inset-0 object-cover #{image_position(item)} shadow"  %>
+                <%= cl_image_tag item.photos[0].key, class:"rounded-t absolute h-full w-full inset-0 object-cover shadow", style:"#{image_position(item)}"  %>
               </div>
               <div class="px-2 pt-2 ">
                 <div class="text-gray-700 font-semibold tracking-tight truncate font-cursive" ><%= item.title %></div>
@@ -100,7 +100,7 @@
           <%= link_to item_path(item), class:"group" do %>
           <div class="relative shadow-3xl rounded pb-2 lg:shadow-none lg:border-gray-200 lg:border lg:border-opacity-70 lg:hover:shadow-3xl focus:outline-none">
             <div class="relative pb-4/5">
-              <%= cl_image_tag item.photos[0].key, class:"rounded-t absolute h-full w-full inset-0 object-cover #{image_position(item)} shadow"  %>
+              <%= cl_image_tag item.photos[0].key, class:"rounded-t absolute h-full w-full inset-0 object-cover shadow", style:"#{image_position(item)}"  %>
             </div>
             <div class="px-2 pt-2">
               <div class="text-gray-700 font-semibold tracking-tight truncate font-cursive"><%= item.title %></div>
