--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr" dir="ltr">
   <head>
-    <title>Mabciaceramic</title>
+    <title>Objets fait main - Céramique - Mabciaceramic</title>
     <meta charset="utf-8">
-    <meta name="description" content="Boutique en ligne d'articles uniques fabriqués par une artiste">
+    <meta name="description" content="Boutique en ligne d'articles en céramique, uniques et fabriqués à la main">
 
 <!--  Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32-f5f581cfd59e55cfdef7ea59d2acfe9d7e1d0a9dbb6b15a638a2ebf6607f9b71.png" >
