--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
       <div class="h-1/3 lg:h-full relative z-10">
         <div class="lg:flex lg:flex-col lg:justify-center lg:h-full lg:px-16 2xl:px-0.5">
           <div class="pt-16 px-4 text-center lg:text-left">
-            <h1 class="text-gray-700 font-bold font-cursive tracking-tight text-3xl xl:text-4xl 2xl:text-5xl">Objets en céramiques <br> fait main</h1>
+            <h1 class="text-gray-700 font-bold font-cursive tracking-tight text-3xl xl:text-4xl 2xl:text-5xl">Objets en céramique <br> fait main</h1>
           </div>
           <div class="pt-12 flex justify-center lg:justify-start px-4 lg:pt-16">
             <%= link_to "Découvrir", items_path, class:'py-3 px-4 text-base text-gray-700 font-black tracking-tight bg-japonica-400 border-2 border-white rounded-xl hover:bg-gray-700 hover:text-white focus:outline-none xl:px-6 xl:py-4 xl:text-lg' %>
