--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -21,7 +21,7 @@
     <div class="px-2 inline-flex h-full space-x-2">
       <% @item.photos.each do |photo| %>
         <div class="relative h-64 w-72">
-          <%= cl_image_tag photo.key, class:"absolute h-full w-full inset-0 object-cover shadow rounded", style:"#{image_position(@item)}", alt:"présentation de l'objet"  %>
+          <%= cl_image_tag photo.key, class:"absolute h-full w-full inset-0 object-cover shadow rounded #{image_position(item)}", alt:"présentation de l'objet"  %>
         </div>
       <% end %>
     </div>
@@ -33,17 +33,17 @@
 <!-- grid de photos sur desktop -->
   <div data-controller="slideshow" class="hidden max-h-screen lg:pt-2 lg:px-2 lg:grid lg:grid-rows-2 lg:grid-cols-5 lg:gap-2">
     <div class="relative h-full pb-4/5 row-span-2 col-span-3">
-      <%= cl_image_tag @item.photos[0].key, class:"absolute h-full w-full inset-0 object-cover shadow rounded-l-lg", style:"#{image_position(@item)}", alt:"présentation de l'objet" %>
+      <%= cl_image_tag @item.photos[0].key, class:"absolute h-full w-full inset-0 object-cover shadow rounded-l-lg #{image_position(item)}", alt:"présentation de l'objet" %>
     </div>
     <div class="relative h-full pb-4/5 col-span-1">
-      <%= cl_image_tag @item.photos[2].key, class:"absolute h-full w-full inset-0 object-cover shadow", style:"#{image_position(@item)}", alt:"présentation de l'objet" %>
+      <%= cl_image_tag @item.photos[2].key, class:"absolute h-full w-full inset-0 object-cover shadow #{image_position(item)}", alt:"présentation de l'objet" %>
     </div>
     <div class="relative h-full pb-4/5 col-span-1">
-      <%= cl_image_tag @item.photos[3].key, class:"absolute h-full w-full inset-0 object-cover shadow rounded-tr-lg", style:"#{image_position(@item)}", alt:"présentation de l'objet" %>
+      <%= cl_image_tag @item.photos[3].key, class:"absolute h-full w-full inset-0 object-cover shadow rounded-tr-lg #{image_position(item)}", alt:"présentation de l'objet" %>
     </div>
 
     <div class="relative h-full col-span-2">
-      <%= cl_image_tag @item.photos[1].key, class:"absolute h-full w-full inset-0 object-cover shadow rounded-br-lg", style:"#{image_position(@item)}", alt:"présentation de l'objet"  %>
+      <%= cl_image_tag @item.photos[1].key, class:"absolute h-full w-full inset-0 object-cover shadow rounded-br-lg #{image_position(item)}", alt:"présentation de l'objet"  %>
 
 <!--     this butoon hide everything and show a carousel with all photos -->
       <button data-action="slideshow#show" class="absolute px-1 py-1 text-gray-700 text-sm flex items-center space-x-2 right-2 bottom-2 bg-white rounded-xl bg-opacity-80 hover:bg-opacity-100 focus:outline-none">
