--- a/app/views/shared/menu/_menu_before_login.html.erb
+++ b/app/views/shared/menu/_menu_before_login.html.erb
@@ -1,4 +1,4 @@
-<div data-menu-target="toggleable" class="hidden static fixed z-20 top-18 w-full h-full flex flex-col py-3 bg-gray-100">
+<div data-menu-target="toggleable" class="hidden fixed z-50 top-18 w-full h-full flex flex-col py-3 bg-gray-100">
 
 <!-- Crée un compte vraiment nécessaire ? fusion avec se connecter ?
  -->
