bug fixed not like last commit, added way to calc height of menu and stop scrolling behavior from body when menu is open

--- a/app/views/shared/menu/_menu_after_login.html.erb
+++ b/app/views/shared/menu/_menu_after_login.html.erb
@@ -1,4 +1,4 @@
-<div data-menu-target="toggleable" class="hidden fixed z-50 top-18 w-full h-full flex flex-col py-3 bg-gray-100">
+<div data-menu-target="toggleable" class="hidden z-50 overflow-scroll h-menu flex flex-col py-3 bg-gray-100">
 
   <div class="pb-5 border-b border-gray-200">
     <div>
