--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -14,7 +14,7 @@
       </div>
       <% if @orders.where(status: 'send').count > 0 %>
         <div class="text-center">
-          <div class="pt-4 max-w-xs mx-auto">
+          <div class="pt-6 max-w-sm mx-auto">
             <span class="text-gray-700 text-xl font-bold shadow-inner">  <%= @orders.where(status: 'send').count %> Commandes en cours d'envoi </span>
             <div class="pt-2">
               <span class="text-gray-500 text-sm italic">Vous avez une question ou vous avez fait une erreur lors de la commande ? <%= link_to "Contactez-moi", new_contact_path, class:'underline' %> </span>
@@ -25,7 +25,7 @@
             <% @orders.where(status: 'send').each do |order| %>
                 <% unless order.status.nil? %>
                   <%= link_to order_path(order) do %>
-                    <div class="px-4 py-4 mt-4 flex flex-col bg-white shadow-total rounded max-w-xs mx-auto lg:mx-0">
+                    <div class="px-4 py-4 mt-4 flex flex-col bg-white shadow-total rounded max-w-xs mx-auto">
                       <span class="text-gray-700 font-bold">Commande n°<%=  order.id  %></span>
                       <div class="flex flex-wrap justify-center">
                         <% order.cart.cart_items.each do |cart_item| %>
