few changes to front and specialy footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
 
-  <body class="min-h-screen">
+  <body class="min-h-screen bg-gray-50">
 
     <%= render "shared/navbar" unless @disable_nav %>
 
