--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -36,7 +36,7 @@
 <!-- Navbar sur desktop -->
 <nav class="hidden lg:contents">
 
-  <div class="sticky py-1 top-0 z-20 bg-white border-b-2 border-gray-200 border-opacity-30">
+  <div class="sticky py-1 top-0 z-20 bg-white shadow">
     <div class="px-4 flex justify-between items-center max-w-7xl mx-auto">
       <div class="py-4 flex items-baseline space-x-8 xl:space-x-14">
         <div>
