--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,7 @@
 
 <div data-controller="item-categories">
 
-  <div class="py-16 lg:py-24 max-w-7xl mx-auto">
+  <div class="py-16 lg:py-36 max-w-7xl mx-auto">
     <div class="px-2 md:px-6">
       <h2 class="text-3xl font-medium font-cursive text-left text-gray-800 tracking-tight lg:text-4xl">Mes créations du moment</h2>
       <p class="pt-2 text-sm text-gray-500 max-w-md">Explorez ma séléction personnelle d'objet que j'ai réalisée à la main dans mon ateliers. Des objets du quotidiens, décoratifs, pour votre intérieur ou votre aquarium, il y en a pour tous les goûts.</p>
@@ -48,7 +48,7 @@
 
 <!-- Catégories filtrer en front en JS  -->
 
-    <div class="toto pt-4 pb-10  mt-10 ml-2 overflow-x-auto scrollbars-hidden md:ml-6">
+    <div class="pt-4 pb-10  mt-10 ml-2 overflow-x-auto scrollbars-hidden md:ml-6">
       <div class="px-4 inline-flex items-center text-center space-x-2">
 
         <button data-action="click->item-categories#displayAll" data-item-categories-target="allButton" class="px-4 py-3 text-sm font-bold text-white rounded-full  border border-gray-200 whitespace-nowrap tracking-wide focus:outline-none">Tout voir</button>
