--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,29 +1,29 @@
-<footer class="px-4 pt-12 bg-gray-100 md:px-8">
+<footer class="px-4 pt-12 bg-gray-900 md:px-8">
   <div class="lg:flex lg:space-x-12 max-w-7xl mx-auto">
     <div class="lg:w-1/2">
       <div>
         <%= image_tag "Logo_footer.png", class:'rounded-full w-12 h-12' %>
       </div>
       <div class="pt-4">
-        <p class="text-base text-gray-500">"Je palpe cette céramique épaisse, d'une facture incontestablement tupi par son engobe blanc bordé de rouge et le fin lacis de traits noirs." (Levi-Strauss)</p>
+        <p class="text-base text-gray-300">"Je palpe cette céramique épaisse, d'une facture incontestablement tupi par son engobe blanc bordé de rouge et le fin lacis de traits noirs." (Levi-Strauss)</p>
       </div>
 
       <div class="pt-8 flex space-x-6">
-        <a href="https://www.facebook.com/MabciaCeramic" class="text-gray-400 hover:text-gray-500">
+        <a href="https://www.facebook.com/MabciaCeramic" class="text-gray-300 hover:text-white">
           <span class="sr-only">Facebook</span>
           <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
             <path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd" />
           </svg>
         </a>
 
-        <a href="https://www.instagram.com/mabcia_ceramic/" class="text-gray-400 hover:text-gray-500">
+        <a href="https://www.instagram.com/mabcia_ceramic/" class="text-gray-300 hover:text-white">
           <span class="sr-only">Instagram</span>
           <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
             <path fill-rule="evenodd" d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z" clip-rule="evenodd" />
           </svg>
         </a>
 
-        <a href="https://www.etsy.com/fr/shop/MabciaCeramic?ref=hpsh" class="text-gray-400 hover:text-gray-500">
+        <a href="https://www.etsy.com/fr/shop/MabciaCeramic?ref=hpsh" class="text-gray-300 hover:text-white">
           <span class="sr-only">Etsy</span>
           <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="72.424 42.569 339.041 160.792"><path d="M108.783 100.639V55.192c0-1.684.168-2.694 3.031-2.694h38.545c6.734 0 10.437 5.724 13.131 16.496l2.188 8.586h6.564c1.177-24.406 2.186-35.011 2.186-35.011s-16.495 1.851-26.258 1.851H98.854l-26.431-.842v7.07l8.923 1.683c6.228 1.179 7.74 2.524 8.249 8.249 0 0 .506 16.832.506 44.607 0 27.771-.506 44.437-.506 44.437 0 5.049-2.021 6.9-8.249 8.082l-8.923 1.684v7.066l26.431-.84h44.101c9.931 0 32.991.84 32.991.84.503-6.061 3.872-33.498 4.377-36.524h-6.228l-6.565 14.981c-5.219 11.78-12.792 12.623-21.21 12.623h-25.082c-8.417 0-12.457-3.367-12.457-10.604v-38.379s18.347 0 24.742.506c4.714.338 7.574 1.684 9.091 8.248l2.021 8.753h7.234l-.503-22.053 1.009-22.217h-7.236l-2.355 9.762c-1.517 6.396-2.525 7.577-9.091 8.248-7.405.844-24.913.675-24.913.675v.167h.003v-.003zm99.816-40.733c-2.357 10.436-4.714 18.515-12.962 23.902-5.049 3.365-10.1 4.542-12.117 4.711v6.396h14.98v51.675c0 14.478 9.596 21.549 22.387 21.549 9.932 0 20.198-4.208 23.734-12.963l-3.536-4.545c-1.684 2.863-7.067 7.07-13.801 7.07-7.405 0-11.445-5.051-11.445-17.841V94.245l24.914 1.853 1.345-11.449-26.258 1.011V60.073l-7.241-.167zm53.192 79.484l-6.396.168c.336 3.702.506 8.417.506 12.793 0 4.545-.168 8.753-.506 10.772 0 0 12.793 4.709 25.754 4.709 17.506 0 31.478-8.416 31.478-24.912 0-28.275-42.418-24.066-42.418-43.09 0-7.91 7.069-10.941 14.812-10.941 6.06 0 11.109 2.188 12.119 5.389l4.209 12.624 6.229-.336c.506-6.734.841-14.477 1.852-20.704-5.388-2.357-16.667-3.706-23.731-3.706-16.5 0-29.795 7.239-29.795 23.399 0 28.109 41.406 22.386 41.406 43.093 0 7.403-4.547 12.622-14.812 12.622-9.424 0-14.139-4.88-15.987-9.764l-4.72-12.116zm101.453 19.446c-9.745 27.221-21.674 34.273-32.426 34.273-4.539 0-6.721-2.018-7.396-5.205l-2.52-13.109-7.058.336c-1.344 7.73-2.688 16.302-4.534 23.357 4.201 3.188 11.254 4.872 16.801 4.872 11.596 0 29.236-1.515 45.363-39.821l27.053-63.845c2.186-5.21 3.023-5.714 9.408-8.236l3.529-1.341v-5.881l-15.963.84-17.137-.84v5.881l4.366 1.341c4.367 1.347 6.387 3.026 6.387 6.051 0 1.511-.506 3.024-1.348 5.374-2.52 6.389-18.146 44.359-22.342 52.426l4.195-1.515c-7.394-18.313-18.646-48.895-20.328-54.099-.336-1.009-.504-1.849-.504-2.693 0-2.687 1.848-4.872 5.881-5.711l5.545-1.173v-5.881l-23.021.84-18.313-.84v5.881l3.025 1.007c4.2 1.344 5.209 2.521 7.729 8.401 13.941 31.925 20.498 49.396 29.399 72.249l4.209-12.939z"/></svg>
         </a>
@@ -32,48 +32,48 @@
     <div class="pt-12 flex space-x-12 lg:w-1/2 lg:justify-center">
       <div class="">
         <div>
-          <h3 class="text-sm font-semibold text-gray-400 tracking-wider uppercase">
+          <h3 class="text-sm font-semibold text-white tracking-wider uppercase">
             Artiste
           </h3>
           <ul class="mt-4 space-y-4">
             <li>
-              <%= link_to "Contact", new_contact_path, class:'text-base text-gray-500 hover:text-gray-900' %>
+              <%= link_to "Contact", new_contact_path, class:'text-base text-gray-300 hover:text-white' %>
             </li>
 
             <li>
-              <%= link_to "A propos", about_path, class:'text-base text-gray-500 hover:text-gray-900' %>
+              <%= link_to "A propos", about_path, class:'text-base text-gray-300 hover:text-white' %>
             </li>
 
             <li>
-              <%= link_to "Journal", articles_path, class:'text-base text-gray-500 hover:text-gray-900' %>
+              <%= link_to "Journal", articles_path, class:'text-base text-gray-300 hover:text-white' %>
             </li>
 
             <li>
-              <%= link_to "Magasin", items_path, class:'text-base text-gray-500 hover:text-gray-900' %>
+              <%= link_to "Magasin", items_path, class:'text-base text-gray-300 hover:text-white' %>
             </li>
           </ul>
         </div>
       </div>
       <div class="">
         <div>
-          <h3 class="text-sm font-semibold text-gray-400 tracking-wider uppercase">
+          <h3 class="text-sm font-semibold text-white tracking-wider uppercase">
             Utile
           </h3>
           <ul class="mt-4 space-y-4">
             <li>
-              <%= link_to "Respect de la vie privée", privacy_path, class:'text-base text-gray-500 hover:text-gray-900' %>
+              <%= link_to "Respect de la vie privée", privacy_path, class:'text-base text-gray-300 hover:text-white' %>
             </li>
 
             <li>
-              <%= link_to "Conditions de ventes", terms_path, class:'text-base text-gray-500 hover:text-gray-900' %>
+              <%= link_to "Conditions de ventes", terms_path, class:'text-base text-gray-300 hover:text-white' %>
             </li>
 
             <li>
-              <button class="text-base text-gray-500 hover:text-gray-900 focus:outline-none" onclick="Osano.cm.showDrawer('osano-cm-dom-info-dialog-open')">Préférence de cookie</button>
+              <button class="text-base text-gray-300 hover:text-white focus:outline-none" onclick="Osano.cm.showDrawer('osano-cm-dom-info-dialog-open')">Préférence de cookie</button>
             </li>
 
             <li>
-              <%= link_to "Mentions légales", legals_path, class:'text-base text-gray-500 hover:text-gray-900' %>
+              <%= link_to "Mentions légales", legals_path, class:'text-base text-gray-300 hover:text-white' %>
             </li>
 
           </ul>
@@ -82,7 +82,7 @@
     </div>
   </div>
   <div class="mt-12 border-t border-gray-200 px-4 py-8">
-    <p class="text-base text-gray-400 xl:text-center">
+    <p class="text-base text-gray-300 xl:text-center">
       &copy; 2021 Toto, inc. All rights reserved.
     </p>
   </div>
