--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -123,7 +123,7 @@
     <div class="max-w-7xl mx-auto">
 
       <div class="">
-        <h2 class="text-center text-2xl text-gray-800 font-cursive font-black tracking-tight lg:text-3xl">Vous voulez en apprendre plus sur la céramique ?</h2>
+        <h2 class="text-center text-2xl text-gray-800 font-cursive font-black tracking-tight lg:text-3xl xl:text-4xl">Vous voulez en apprendre plus sur la céramique ?</h2>
       </div>
 
 
@@ -248,7 +248,7 @@
 <!--   instagram section avec la gallery de post -->
   <section class="pt-14 pb-36 lg:pt-12">
     <div>
-      <h2 class="text-center text-2xl text-gray-800 font-cursive font-bold tracking-tight lg:text-3xl">Pour en voir plus...</h2>
+      <h2 class="text-center text-2xl text-gray-800 font-cursive font-bold tracking-tight lg:text-3xl xl:text-4xl">Pour en voir plus...</h2>
     </div>
 
     <div class="px-4 pt-6 lg:grid lg:grid-cols-3 lg:gap-4 lg:pt-8 2xl:px-0 max-w-7xl mx-auto">
