somes changes to index items and show

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -12,7 +12,7 @@
 <div class="pb-24 max-w-6xl mx-auto">
   <div class="px-2 flex flex-col">
     <span class="text-japonica-500 text-sm font-semibold lg:text-lg"><%= @item.category %></span>
-    <span class="text-gray-700 text-xl font-bold font-cursive lg:text-2xl 2xl:text-3xl"><%= @item.title %></span>
+    <span class="text-gray-800 text-xl font-bold font-cursive lg:text-2xl 2xl:text-3xl"><%= @item.title %></span>
   </div>
 
 
@@ -82,13 +82,11 @@
   <div class="px-2 md:flex md:flex-row-reverse md:justify-between">
     <div class="md:flex md:flex-col max-w-lg md:ml-2 md:w-2/5">
       <div class="lg:sticky lg:top-5 lg:pt-2 lg:pb-4 lg:px-4 lg:mt-6 lg:border-2 lg:border-gray-200 lg:rounded-xl lg:border-opacity-70">
-        <div class="-mt-4 lg:mt-0">
+        <div class="-mt-4 lg:mt-0 flex items-center space-x-2">
           <span class="font-medium text-gray-800 font-cursive text-2xl"><%= @item.price %>€</span>
+          <span class="text-xs text-gray-700 tracking-wide bg-japonica-200 px-2 py-0.5 rounded-full font-semibold italic">Livraison GRATUITE</span>
         </div>
-        <div class="pt-1">
-          <span class="text-xs text-white tracking-wide bg-japonica-400 px-2 py-1 rounded-full font-bold">Livraison GRATUITE</span>
-        </div>
-        <div class="pt-2 text-gray-600">
+        <div class="pt-1 text-gray-600">
           <%= @item.description %>
         </div>
         <% if @item.sold? %>
