--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,7 +2,7 @@
 <div data-controller="item-categories">
 
   <div class="py-16 lg:py-36 max-w-7xl mx-auto">
-    <div class="px-2 md:px-6">
+    <div class="px-4 md:px-6">
       <h2 class="text-3xl font-medium font-cursive text-left text-gray-800 tracking-tight lg:text-4xl">Mes créations du moment</h2>
       <p class="pt-2 text-sm text-gray-500 max-w-md">Explorez ma séléction personnelle d'objet que j'ai réalisée à la main dans mon ateliers. Des objets du quotidiens, décoratifs, pour votre intérieur ou votre aquarium, il y en a pour tous les goûts.</p>
     </div>
@@ -49,7 +49,7 @@
 <!-- Catégories filtrer en front en JS  -->
 
     <div class="pt-4 pb-10  mt-10 ml-2 overflow-x-auto scrollbars-hidden md:ml-6">
-      <div class="px-4 inline-flex items-center text-center space-x-2">
+      <div class="px-6 inline-flex items-center text-center space-x-2">
 
         <button data-action="click->item-categories#displayAll" data-item-categories-target="allButton" class="px-4 py-3 text-sm font-bold text-white rounded-full  border border-gray-200 whitespace-nowrap tracking-wide focus:outline-none">Tout voir</button>
         <% @categories.each do |category| %>
@@ -57,12 +57,12 @@
         <% end %>
       </div>
     </div>
-    <div class="border-b border-gray-200 mx-2 md:mx-6"></div>
+    <div class="border-b border-gray-200 mx-4 md:mx-6"></div>
 
 
     <!-- All items reserve grid -->
 
-    <div data-item-categories-target="allCategory" class="hidden px-2 pt-6 grid grid-cols-1 gap-2 md:px-6 lg:grid-cols-3 xl:grid-cols-4 lg:gap-4">
+    <div data-item-categories-target="allCategory" class="hidden">
       <% @items.each do |item| %>
         <%= link_to item_path(item), class:"group" do %>
             <div class="relative shadow-3xl rounded pb-2 lg:shadow-none lg:border-gray-200 lg:border lg:border-opacity-70 lg:hover:shadow-3xl focus:outline-none">
@@ -70,7 +70,7 @@
                 <%= cl_image_tag item.photos[0].key, class:"rounded-t absolute h-full w-full inset-0 object-cover #{image_position(item)} shadow", alt:"Objet en céramique"  %>
               </div>
               <div class="px-2 pt-2 ">
-                <div class="text-gray-700 font-semibold tracking-tight truncate font-cursive" ><%= item.title %></div>
+                <div class="text-gray-800 font-semibold truncate font-cursive lg:text-lg" ><%= item.title %></div>
               </div>
               <% if item.sold? %>
                 <div class=''>
@@ -82,8 +82,9 @@
                   </div>
                 </div>
               <% else %>
-                <div class="px-2 pt-2">
+                <div class="px-2 pt-2 space-x-2 flex items-center">
                   <span class="font-medium text-gray-800"> <%= item.price %>€ </span>
+                  <span class="px-2 py-0.5 text-gray-700 bg-japonica-200 rounded-full text-xs italic font-semibold tracking-wide">Livraison gratuite</span>
                 </div>
               <% end %>
             </div>
@@ -95,7 +96,7 @@
     <!-- Filtrage des items par category reserve grid  -->
 
     <% @categories.each do |category| %>
-      <div data-type="<%= category %>" data-item-categories-target="category" class="hidden px-2 pt-4 grid grid-cols-1 gap-2 md:px-6 lg:grid-cols-3 xl:grid-cols-4 lg:gap-4">
+      <div data-type="<%= category %>" data-item-categories-target="category" class="hidden">
         <% @items.where(category: category).each do |item| %>
           <%= link_to item_path(item), class:"group" do %>
           <div class="relative shadow-3xl rounded pb-2 lg:shadow-none lg:border-gray-200 lg:border lg:border-opacity-70 lg:hover:shadow-3xl focus:outline-none">
@@ -103,7 +104,7 @@
               <%= cl_image_tag item.photos[0].key, class:"rounded-t absolute h-full w-full inset-0 object-cover #{image_position(item)} shadow", alt:"Objet en céramique"  %>
             </div>
             <div class="px-2 pt-2">
-              <div class="text-gray-700 font-semibold tracking-tight truncate font-cursive"><%= item.title %></div>
+              <div class="text-gray-800 font-semibold truncate font-cursive lg:text-lg"><%= item.title %></div>
             </div>
             <% if item.sold? %>
               <div class=''>
@@ -115,8 +116,9 @@
                 </div>
               </div>
             <% else %>
-              <div class="px-2 pt-2">
+              <div class="px-2 pt-2 space-x-2 flex items-center">
                 <span class="font-medium text-gray-800"> <%= item.price %>€ </span>
+                <span class="px-2 py-0.5 text-gray-700 bg-japonica-200 rounded-full text-xs italic font-semibold tracking-wide">Livraison gratuite</span>
               </div>
             <% end %>
           </div>
@@ -127,7 +129,7 @@
 
 
  <!--    My display grid is here, it is where cards finish their course  -->
-    <div id="table" class="px-2 pt-8 grid grid-cols-1 gap-2 md:px-6 lg:grid-cols-3 xl:grid-cols-4 lg:gap-4">
+    <div id="table" class="px-4 pt-8 grid grid-cols-1 gap-4 md:px-6 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
 
     </div>
 
